syntax = "proto3";

package pb;

import "services/tags/tag.proto";
import "services/modules/module.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";


message GetModuleTypeAvailableTagsRequest {
  ModuleType moduleType = 1;
}

message GetModuleTypeAvailableTagsResponse {
  repeated ViewTag tags = 1;
}

message CreateModuleTypeAvailableTagRequest {
  ModuleType moduleType = 1;
  string tag = 2;
}

message UpdateModuleTypeAvailableTagRequest {
  int32 tagId = 1;
  string newTag = 2;
}

message DeleteModuleTypeAvailableTagRequest {
  int32 tagId = 1;
}

message CreateModuleTagRequest {
  int32 moduleId = 1;
  int32 tagId = 2;
}

message CreateModuleTagResponse {
  int32 moduleId = 1;
  int32 tagId = 2;
}

message DeleteModuleTagRequest {
  int32 moduleId = 1;
  int32 tagId = 2;
}